# Physical-AI-and-Humanoid-Robotics-Textbook

./: .gitignore  DOCUSAURUS_ENV_FIX.md  ENV_MIGRATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  PROJECT_STATUS.md  QUICK_START.md  README.md  RUNNING_LOCALLY.md  SETUP_COMPLETE.md  api-server.mjs  docusaurus.config.js  load-env.js  package-lock.json  package.json  railway.toml  run-migration.js  server.js  sidebars.js  start_all.bat  start_all.ps1  start_project.bat  start_project.ps1  test-auth-direct.js  test-chatbot.html  test_auth.js  test_connections.py  vercel.json
.claude/: settings.local.json
.docusaurus/: client-manifest.json  client-modules.js  docusaurus.config.mjs  globalData.json  i18n.json  registry.js  routes.js  routesChunkNames.json
backend/: .gitignore  Dockerfile  render.yaml  requirements.txt
docs/: accessibility-guide.md  authentication-guide.md  backup-recovery-guide.md  deployment-guide.md  integration-guide.md  intro.md  monitoring-alerting-guide.md  performance-optimization.md  security-guide.md  weekly-roadmap.md
docs/module1-ros2-nervous-system/ros2_example_package/: CMakeLists.txt  package.xml
docs/module1-ros2-nervous-system/ros2_example_package/src/my_robot_controller/: simple_publisher.py  simple_subscriber.py
fastapi_app/: README.md  agent.py  app.py  app_with_auth.py  connection.py  formatters.py  greeting_detector.py  llm_router.py  requirements.txt  test_agent.py  test_api.py
frontend/: package-lock.json  package.json  vercel.json  webpack.config.js  webpack.dev.js  widget.js
migrations/: 001_better_auth_core.sql  (+1 more)
(+339 files in other folders)
